# shader-converter

./: .gitmodules  CMakeLists.txt  README.md
ShaderStudio/: CMakeLists.txt
ShaderStudio/source/: ImGuiTextEditor.cpp  ImGuiTextEditor.hpp  main.cpp
include/: shaderconverter.hpp
source/: shaderconverter.cpp
